--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^5.0.1",
     "json-server": "^0.16.3",
+    "mobx": "^6.3.0",
+    "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
