--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,6 +20,7 @@
     "async-storage": "^0.1.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "font-awesome": "^4.7.0",
     "json-server": "^0.16.3",
     "mobx": "^6.3.0",
     "mobx-react-lite": "^3.2.0",
